# Cpp-Practical-Course

./: README.md
final/: CMakeLists.txt
final/pljit/: CMakeLists.txt  Pljit.cpp  Pljit.hpp  main.cpp
final/pljit/ast/: AST.cpp  AST.hpp  ASTOptimizer.hpp  ASTOptimizerConstantPropagation.cpp  ASTOptimizerConstantPropagation.hpp  ASTOptimizerDeadCode.cpp  ASTOptimizerDeadCode.hpp  ASTPrintVisitor.cpp  ASTPrintVisitor.hpp  ASTVisitor.hpp  CMakeLists.txt
final/pljit/codem/: CMakeLists.txt  CodeManagement.cpp  CodeManagement.hpp  Reference.cpp  Reference.hpp
final/pljit/evaluation/: CMakeLists.txt  EvaluationContext.cpp  EvaluationContext.hpp  OptimizationTable.cpp  OptimizationTable.hpp  Symbol.hpp  SymbolTable.cpp  SymbolTable.hpp
final/pljit/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.hpp  Token.hpp
final/pljit/parser/: CMakeLists.txt  Parser.cpp  Parser.hpp
final/pljit/parsetree/: CMakeLists.txt  ParseTree.cpp  ParseTree.hpp  ParseTreePrintVisitor.cpp  ParseTreePrintVisitor.hpp  ParseTreeVisitor.hpp
final/pljit/semantic/: CMakeLists.txt  SemanticAnalysis.cpp  SemanticAnalysis.hpp
final/test/: CMakeLists.txt  TestAST.cpp  TestASTPrintVisitor.cpp  TestEvaluation.cpp  TestLexer.cpp  TestOptimization.cpp  TestParseTreePrintVisitor.cpp  TestParser.cpp  TestPljit.cpp
sheet03/exercise1/: CMakeLists.txt
sheet03/exercise1/binary_heap/: CMakeLists.txt  main.cpp
sheet03/exercise1/lib/: BinaryHeap.cpp  BinaryHeap.hpp  CMakeLists.txt
sheet03/exercise1/test/: CMakeLists.txt  TestBinaryHeap.cpp
sheet03/exercise2/: CMakeLists.txt
sheet03/exercise2/lib/: CMakeLists.txt  SortPointers.cpp  SortPointers.hpp
sheet03/exercise2/test/: CMakeLists.txt  TestSortPointers.cpp
sheet03/exercise3/: CMakeLists.txt
sheet03/exercise3/lib/: CMakeLists.txt  ObjectRepresentation.cpp  ObjectRepresentation.hpp
sheet03/exercise3/test/: CMakeLists.txt  TestObjectRepresentation.cpp
sheet04/exercise1/: CMakeLists.txt
sheet04/exercise1/lib/: CMakeLists.txt  Complex.cpp  Complex.hpp  Rational.cpp  Rational.hpp
sheet04/exercise1/test/: CMakeLists.txt  TestComplex.cpp  TestRational.cpp
sheet04/exercise2/: CMakeLists.txt
sheet04/exercise2/lib/: BitSet.cpp  BitSet.hpp  CMakeLists.txt
sheet04/exercise2/test/: CMakeLists.txt  TestBitSet.cpp
sheet05/cmake/: clang-tidy.cmake
sheet05/exercise1/lib/: CMakeLists.txt  ChainingHashTable.cpp  ChainingHashTable.hpp  GenericValue.cpp  GenericValue.hpp
sheet05/exercise1/test/: CMakeLists.txt  TestChainingHashTable.cpp
sheet05/exercise2/: CMakeLists.txt  main.cpp
sheet05/exercise2/lib/: CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  OSApi.cpp  OSApi.hpp  TempDirectory.cpp  TempDirectory.hpp  TempFile.cpp  TempFile.hpp
sheet05/exercise2/test/: CMakeLists.txt  TestCommandLine.cpp  Tester.cpp
sheet06/exercise1/lib/: AST.cpp  AST.hpp  ASTVisitor.hpp  EvaluationContext.cpp  EvaluationContext.hpp  PrintVisitor.cpp  PrintVisitor.hpp
sheet07/exercise1/: CMakeLists.txt
sheet07/exercise1/benchmark/: CMakeLists.txt  main.cpp
sheet07/exercise1/lib/: CMakeLists.txt  Find.hpp  Find_dummy.cpp  List.hpp  List_dummy.cpp  MallocAllocator.hpp  MallocAllocator_dummy.cpp  PooledAllocator.hpp  PooledAllocator_dummy.cpp
sheet07/exercise1/test/: CMakeLists.txt  TestFind.cpp  TestList.cpp  TestMallocAllocator.cpp  TestPooledAllocator.cpp
sheet08/exercise1/: CMakeLists.txt
sheet08/exercise1/benchmark/: BenchmarkSynchronization.cpp  CMakeLists.txt
sheet08/exercise1/lib/: AtomicMultiMap.cpp  AtomicMultiMap.hpp  CMakeLists.txt  MultiMap.cpp  MultiMap.hpp  MutexMultiMap.cpp  MutexMultiMap.hpp
sheet08/exercise1/test/: CMakeLists.txt  TestAtomicMultiMap.cpp  TestMultiMap.cpp  TestMutexMultiMap.cpp
