include(CheckCXXSymbolExists)

function(require_symbol SYMBOL)
   check_cxx_symbol_exists("${SYMBOL}" "${ARGN}" "HAVE_${SYMBOL}")

   if (NOT HAVE_${SYMBOL})
      message(FATAL_ERROR "${SYMBOL} is required (${HAVE_${SYMBOL}})")
   endif ()
endfunction()

require_symbol(stat sys/stat.h sys/types.h unistd.h)
require_symbol(nftw ftw.h)
require_symbol(inotify_init sys/inotify.h)
require_symbol(inotify_add_watch sys/inotify.h)
require_symbol(inotify_rm_watch sys/inotify.h)
require_symbol(poll poll.h sys/types.h)
require_symbol(close unistd.h)
require_symbol(read unistd.h)
require_symbol(write unistd.h)
require_symbol(pipe unistd.h)
require_symbol(sigtimedwait signal.h)
require_symbol(sigprocmask signal.h)
require_symbol(kill sys/types.h signal.h)
require_symbol(waitpid sys/types.h wait.h)
require_symbol(fork sys/types.h unistd.h)
require_symbol(dup2 unistd.h)

add_executable(tester TestCommandLine.cpp Tester.cpp)
target_link_libraries(tester raii_core GTest::GTest)
